/*
 * Copyright 2023 The Bazel Authors. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package com.google.idea.blaze.ext;

option java_package = "com.google.idea.blaze.ext";
option java_multiple_files = true;
option java_outer_classname = "IntelliJExtProto";
option use_java_stubby_library = true;

message GetVersionRequest {}

message Version {
  string description = 1;
  string version = 2;
}

message PingRequest {}

message PingResponse {}

message GetStatusRequest {}

message StatusValue {
  string property = 1;
  string value = 2;
}
message Status {
  repeated StatusValue status = 1;
}

service IntelliJExt {
  // Returns the version of this server
  rpc GetVersion(GetVersionRequest) returns (Version) {}

  // A simple no-op request to test server responsiveness and availability.
  rpc Ping(PingRequest) returns (PingResponse) {}

  // Returns a list of property-value pairs, to show the status
  // of the running server. The property names are descriptive only
  // and not to be depended on.
  rpc GetStatus(GetStatusRequest) returns (Status) {}
}
